--- a/front/src/app/ui/layout/layout.component.html
+++ b/front/src/app/ui/layout/layout.component.html
@@ -24,6 +24,7 @@
         </button>
         <mat-menu #menu="matMenu" class="user-menu">
           <button mat-menu-item [disabled]="true">{{ (user | async)?.name }}</button>
+          <button mat-menu-item (click)="addNew()">Add new place</button>
           <button mat-menu-item (click)="logout()">Logout</button>
         </mat-menu>
       </nav>
