--- a/front/src/app/pages/information-place/information-place.component.sass
+++ b/front/src/app/pages/information-place/information-place.component.sass
@@ -11,7 +11,6 @@
   border-radius: 10px
   box-shadow: 0 0 13px 2px #7b1fa2
 
-
 .info-block
   max-width: 50%
   padding: 15px 25px
@@ -23,3 +22,57 @@
 
 .description
   font-size: 16px
+
+.gallery-block
+  padding: 15px 10px
+  border-bottom: 2px solid #7b1fa2
+
+.gallery-title
+  font-size: 24px
+  font-weight: 600
+  text-transform: uppercase
+
+.gallery
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+  flex-direction: row
+  padding: 10px 20px
+
+.gallery-img-block
+  display: flex
+  box-shadow: 0 0 13px 2px #7b1fa2
+  border-radius: 10px
+  overflow: hidden
+  margin: 10px
+
+.gallery-img
+  width: 270px
+  height: 230px
+  object-fit: cover
+
+.form-block-photo
+  padding: 20px 10px 30px
+  border-bottom: 2px solid #7b1fa2
+
+
+.form-title
+  font-size: 24px
+  font-weight: 600
+  text-transform: uppercase
+
+.form
+  display: flex
+  flex-direction: column
+
+.btn-wrapper
+  display: flex
+  justify-content: center
+
+.btn-send
+  display: flex
+  justify-content: center
+  min-width: 200px
+
+mat-progress-spinner
+  margin: 5px
