Сделал форму рейтенга, пересчет реализовал на апи. Выввел данные рейтенга

--- a/front/src/app/pages/add-new-place/add-new-place.component.html
+++ b/front/src/app/pages/add-new-place/add-new-place.component.html
@@ -33,7 +33,7 @@
             </mat-form-field>
             <mat-error
                     *ngIf="image.touched && image.hasError('required')"
-            >Picture name is required!
+            >Picture is required!
             </mat-error>
             <p>Give your agreement to view your publications <mat-checkbox name="agreement" required ngModel #agreement="ngModel">I agree</mat-checkbox>
             </p>
