--- a/front/src/app/pages/home/home.component.sass
+++ b/front/src/app/pages/home/home.component.sass
@@ -1,5 +1,6 @@
 .card
   padding: 10px
+  background: #303030
 
 .img-block
   margin-top: 10px
@@ -13,3 +14,24 @@
   margin: 0 auto
   height: 250px
   object-fit: cover
+
+.review
+  display: flex
+  align-items: center
+
+.review p
+  font-size: 18px
+  padding: 0 10px
+
+.star
+  font-size: 1.2rem
+  color: #b0c4de
+
+.filled
+  color: #1e90ff
+
+.bad
+  color: #deb0b0
+
+.filled.bad
+  color: #ff1e1e
