--- a/front/src/app/pages/information-place/information-place.component.sass
+++ b/front/src/app/pages/information-place/information-place.component.sass
@@ -76,3 +76,49 @@
 
 mat-progress-spinner
   margin: 5px
+
+.isEmpty
+  font-size: 24px
+  font-weight: 600
+  text-align: center
+
+.reviews-block
+  padding: 15px
+  border-bottom: 2px solid #7b1fa2
+
+.review-item
+  padding: 10px
+  border-bottom: 2px solid grey
+  margin-bottom: 10px
+
+.review
+  display: flex
+  align-items: center
+
+.review p
+  padding: 0 10px
+
+.overall
+  font-size: 18px
+  font-weight: 600
+
+.star
+  font-size: 1.5rem
+  color: #b0c4de
+
+.filled
+  color: #1e90ff
+
+.bad
+  color: #deb0b0
+
+.filled.bad
+  color: #ff1e1e
+
+.form-rating
+  display: flex
+  justify-content: space-around
+  padding-top: 30px
+
+.comment
+  margin-bottom: 20px
