--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -18,12 +18,16 @@
                     <mat-card-title>{{ place.title }}</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-
+                    <div class="review">
+                        <p>Rating: </p>
+                        <ngb-rating [(rate)]="place.rating">
+                            <ng-template let-fill="fill" let-index="index">
+                                <span class="star" [class.filled]="fill === 100" [class.bad]="index < 3">&#9733;</span>
+                            </ng-template>
+                        </ngb-rating>
+                        <p>{{place.rating}}</p>
+                    </div>
                 </mat-card-content>
-                <mat-card-actions>
-                    <button mat-button>LIKE</button>
-                    <button mat-button>SHARE</button>
-                </mat-card-actions>
             </mat-card>
         </div>
     </div>
