Сделал удаление сущностей. Добавил кнопку удаления и скрыл ее от обычного пользователя

--- a/front/src/app/pages/home/home.component.sass
+++ b/front/src/app/pages/home/home.component.sass
@@ -23,6 +23,10 @@
   font-size: 18px
   padding: 0 10px
 
+.review mat-icon
+  padding: 0 10px
+  margin-right: 10px
+
 .star
   font-size: 1.2rem
   color: #b0c4de
@@ -35,3 +39,18 @@
 
 .filled.bad
   color: #ff1e1e
+
+a
+  font-size: 22px
+  color: white
+  text-decoration: none
+  margin-bottom: 15px
+  margin-left: -20px
+
+a:hover
+  color: #7b1fa2
+
+mat-card-actions
+  display: flex
+  justify-content: center
+  margin-bottom: 15px!important
