--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -10,12 +10,12 @@
                 fxFlex="33%"
                 *ngFor="let place of places | async"
         >
-            <mat-card class="card" (click)="getInformation(place._id)">
+            <mat-card class="card">
                 <div class="img-block">
                     <img mat-card-image class="img" *ngIf="place" [src]="apiUrl + '/uploads/' + place.image" [alt]="place.title">
                 </div>
                 <mat-card-header>
-                    <mat-card-title>{{ place.title }}</mat-card-title>
+                    <a [routerLink]="['/information-place/', place._id]">{{ place.title }}</a>
                 </mat-card-header>
                 <mat-card-content>
                     <div class="review">
@@ -27,7 +27,14 @@
                         </ngb-rating>
                         <p>{{place.rating}}</p>
                     </div>
+                    <div class="review">
+                        <mat-icon>photo_camera</mat-icon>
+                        <p>{{place.amountPhoto}} photos</p>
+                    </div>
                 </mat-card-content>
+                <mat-card-actions *ngIf="(user | async)?.role === 'admin'">
+                    <button mat-raised-button color="warn" (click)="RemovePlace(place._id)">Delete</button>
+                </mat-card-actions>
             </mat-card>
         </div>
     </div>
