--- a/front/src/app/ui/layout/layout.component.html
+++ b/front/src/app/ui/layout/layout.component.html
@@ -16,7 +16,7 @@
                 *ngIf="isHandset$ | async">
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
-        <a routerLink="/" class="logo-link">Front</a>
+        <a routerLink="/" class="logo-link">City places</a>
       </div>
       <nav *appUserType="'user' else anonMenu">
         <div class="block">
